--- a/Android/FitForma/FitForma/app/src/main/res/values/strings.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/values/strings.xml
@@ -24,5 +24,13 @@
     <string name="account">Account</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="confirm_password" />
+    <string name="already_have_an_account_login_here">Already have an account? Login Here</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="porsi_makanan">Porsi Makanan</string>
+    <string name="kalori">Kalori</string>
+    <string name="karbohidrat">Karbohidrat</string>
+    <string name="protein">Protein</string>
+    <string name="Profile">Profile</string>
 
 </resources>
