--- a/Android/FitForma/FitForma/app/src/main/res/values/strings.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/values/strings.xml
@@ -26,9 +26,14 @@
     <string name="logout">Logout</string>
     <string name="searchbar_hint">Search Food or Scan</string>
     <string name="age">Age</string>
-    <string name="weight">Body Weight</string>
-    <string name="height">Body Height</string>
+    <string name="weight">Body Weight (kg)</string>
+    <string name="height">Body Height (cm)</string>
     <string name="searchad">Get to know your food!</string>
     <string name="scan">Scan</string>
+    <string name="main_greet">Hello,</string>
+    <string name="bmi">BMI</string>
+    <string name="bmr">BMR</string>
+    <string name="saran">Saran Aktivitas</string>
+    <string name="saran_desc">deskripsi saran</string>
 
 </resources>
