--- a/Android/FitForma/FitForma/app/src/main/res/values/strings.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/values/strings.xml
@@ -38,11 +38,11 @@
     <string name="gender">Gender</string>
     <string name="weight_2">Weight</string>
     <string name="height_2">Height</string>
-    <string name="tv_age">user\'s age view</string>
+    <string name="tv_age">age view</string>
     <string name="details">Details</string>
-    <string name="tv_gender">user\'s gender view</string>
-    <string name="tv_weight">user\'s weight view</string>
-    <string name="tv_height">user\'s height view</string>
+    <string name="tv_gender">gender view</string>
+    <string name="tv_weight">weight view</string>
+    <string name="tv_height">height view</string>
     <string name="gender_hint">male / female</string>
     <string name="gallery">Gallery</string>
     <string name="bmi_category">"Your BMI Category : "</string>
