Last Update on detail activity and activity_detail.xml
ini ga tau kenapa banyak banget yang modifed padahal gua cuman modifed yang detailactivity sama activity_detail.xml

--- a/Android/FitForma/FitForma/app/src/main/res/values/strings.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/values/strings.xml
@@ -58,5 +58,8 @@
     <string name="bmi_afterReg">"From your weight and height calculation,\nYour BMI Category is "</string>
     <string name="advice">"Based on your BMI,"</string>
     <string name="goodluck">Good Luck!</string>
+    <string name="carbo">Carbo</string>
+    <string name="calory">Calory</string>
+    <string name="porsi">Porsi</string>
 
 </resources>
